# MiniWebServer

./: .gitignore  CMakeLists.txt  COMPARISON.md  Dockerfile  README.md  docker-compose.yml
bench/: bench_client.cpp
certs/: server.crt  server.key
include/: form_parser.h  http_parser.h  logger.h  mainWindow.h  mysql_wrapper.h  router.h  server.h  server_monitor.h  thread_pool.h
sql/: init.sql
src/: form_parser.cpp  http_parser.cpp  logger.cpp  main.cpp  mainWindow.cpp  mysql_wrapper.cpp  router.cpp  server.cpp  server_monitor.cpp
static/: index.html
test/: test_form_parser.cpp  test_http_parser.cpp  test_main.cpp  test_router.cpp  test_thread_pool.cpp
